@@ -67,6 +67,7 @@ BEGIN {
 $name = "network";
 $version = "___version___";
 @platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0", "redhat-7.1",
+              "redhat-7.2",
               
               "mandrake-7.1", "mandrake-7.2",
               
